manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      labels:
        app: delete-task
    spec:
      containers:
      - name: delete-task
        image: acrtodoappsiddharth1.azurecr.io/deletetask:7
        ports:
        - containerPort: 8000
